# Alpacatrader

./: .env.example  .gitignore  AGENTS.md  Dockerfile  EXPLICIT_REAUDIT_REPORT_2026-06-13.md  EXTERNAL_ADVISOR_DEEP_AUDIT_PROMPT_2026-06-13.md  README.md  SOUL.md  SPEC.md  main.py  opencode.json  pyproject.toml  requirements.txt
archive/: consolidated-research-2026-06-12.md  deep-research-report-2026-06-12.md
config/: default_config.yaml  settings.py
docs/: FINDINGS.md  SPEC.md
researches/: 00-architecture-decision.md  01-context7-api-verification.md  02-dead-imports-crossrefs.md  03-runtime-gap-callgraph.md  04-overlap-redundancy.md  05-config-environment.md  06-test-gap-analysis.md
src/: __init__.py  analytics.py  annotations.py  app.py  classifier_features.py  decision_pipeline.py  entries.py  exits.py  hard_filters.py  market_data.py  market_data_sim.py  move_classifier.py  paper_execution.py  pnl_ledger.py  runner.py  sizing.py  state_machine.py  trade_ledger.py
tests/: conftest.py  test_cli_rebuild.py  test_no_legacy_modules.py  test_phase10_app.py  test_phase1_logger.py  test_phase1_schemas.py  test_phase2_attention.py  test_phase2_confidence.py  test_phase2_scanner.py  test_phase3_hard_filters.py  test_phase4_classifier.py  test_phase4_scaling.py  test_phase5_batch_snapshots.py  test_phase5_entries.py  test_phase5_setup_analytics.py  test_phase6_live_readiness.py  test_phase6_risk.py  test_phase7_execution.py  test_phase7_state_machine.py  test_phase8_exits.py  test_phase9_pipeline.py  test_runner.py  test_settings.py  test_trade_ledger.py
(+7 files in other folders)
