[project]
name = "alpacatrader"
version = "0.4.0"
description = "Attention-First Top-Gainer Trading Bot"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Alpacatrader Team" }
]
keywords = ["trading", "momentum", "top-gainer", "finviz"]

dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "yfinance>=0.2.40",
    "beautifulsoup4>=4.12",
    "requests>=2.31",
    "loguru>=0.7",
    "click>=8.1",
    "alpaca-py>=0.43",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
